bin_PROGRAMS=graph nhash nhash2 gr2edge
graph_SOURCES=src/graph.cpp src/db.cpp src/edge.cpp src/seq.cpp src/adjlist.cpp src/pagerank.cpp src/ipagerank.cpp src/spp.cpp src/alt_precompute.cpp src/malt_precompute.cpp src/spp_experiment.cpp
graph_LDADD=-lboost_program_options -lboost_filesystem
nhash_SOURCES=src/nhash.cpp
nhash_LDADD=-lboost_program_options
nhash2_SOURCES=src/nhash2.cpp
nhash2_LDADD=-lboost_program_options
gr2edge_SOURCES=src/gr2edge.cpp
gr2edge_LDADD=-lboost_program_options

